--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,17 @@
+<label for="">Server Name</label>
+<input type="text" class="form-control"
+(input)="onUpdateServerName($event)">
+
+<button class="btn btn-primary" 
+[disabled] ="!allowNewServer" 
+(click)="onCreateServer()">Add Server</button>
+<p>{{serverName}}</p>
+<button class="btn btn-primary" 
+[disabled] ="!allowNewServer"
+ ng-click="onCreateServer()">Add Server</button>
+
+<p [innerText]="allowNewServer">{{ allowNewServer }}</p>
+<p [innerText]="allowNewServer"></p>
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
