--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,6 +2,9 @@
 <input type="text" class="form-control"
 (input)="onUpdateServerName($event)">
 
+<input type="text" class="form-control"
+[(ngModel)]= "serverName">
+
 <button class="btn btn-primary" 
 [disabled] ="!allowNewServer" 
 (click)="onCreateServer()">Add Server</button>
