--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,5 +1,5 @@
 <p [ngStyle]="{'background-color': getColor()}"
-    [ngClass]="">
+    [ngClass]="{online: serverStatus === 'online'}">
     The {{'Server'}} with ID {{ serverId }} 
     is {{ getServerStatus() }}
 </p>
