--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,18 @@
                 (click)="username = ''">
                 Reset User
             </button>
+            <br>
+            <!-- <button class="btn btn-primary" 
+            (click)= "showSecret = !showSecret">
+                Display Details</button> -->
+            <button class="btn btn-primary" 
+            (click)= "onTooggleDisplay()">
+                Display Details</button>
+            <p *ngIf="showSecret">Secret Password = tuna</p>
+            <div *ngFor="let logItem of log"
+                [ngStyle]="{'background-color': logItem >= 5 ? 'blue' : 'transparent'}"
+                [ngClass]="{'white-text': logItem >=5}">
+                {{ logItem }}</div>
         </div>
     </div>
 </div>
