--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -16,5 +16,4 @@
 <p [innerText]="allowNewServer">{{ allowNewServer }}</p>
 <p [innerText]="allowNewServer"></p>
 <p>{{serverCreationStatus}}</p>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
