--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipes-list></app-recipes-list>
+        <app-recipes-list (recipeChose)="recipe = $event"></app-recipes-list>
     </div>
     <div class="col-md-7">
-        <app-recipes-detail></app-recipes-detail>
+        <app-recipes-detail [recipe]="recipe" *ngIf="recipe; else infoText"></app-recipes-detail>
+        <ng-template #infoText>
+            Please Select one recipe!
+        </ng-template>
     </div>
 </div>
