--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,6 +8,7 @@
             <a class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">
                 {{ingredient.name}} {{ingredient.amount}}
             </a>
+            <!-- <input matInput [textMask]="mask" placeholder="Choose a date"> -->
         </ul>
     </div>
 </div>
