--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)">
+        <app-shopping-edit>
 
         </app-shopping-edit>
         <hr>
@@ -8,7 +8,6 @@
             <a class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">
                 {{ingredient.name}} {{ingredient.amount}}
             </a>
-            <!-- <input matInput [textMask]="mask" placeholder="Choose a date"> -->
         </ul>
     </div>
 </div>
