--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12" *ngIf="recipe"> 
-        <img [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive" style="max-height: 300px;">
+        <img [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive" style="max-height: 300px;width: fit-content;">
     </div>
 </div>
 <div class="row">
