--- a/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
+++ b/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
@@ -4,6 +4,6 @@
         <p class="list-group-item-text">{{recipe.description}}</p>
     </div>
     <span class="pull-right">
-        <img [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive" style="max-height: 50px;">
+        <img [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive" style="max-height: 50px; width: 21%; margin: 0 0px 2px 334px;">
     </span>
 </a>
